updated at: 2023-08-03 17:13, 【INGY-K 002】fbxモデル - 田中の犬小屋　La Perrera - BOOTH

--- a/VRChat/01/1328501.html
+++ b/VRChat/01/1328501.html
@@ -104,9 +104,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "QFBmnTXYO664114CjLcS/X9JwC2SYW+RPYZGi0dosUE="></script>
+    "VId3nR+ZZ6j7M7AtmjztPY4fHCHlbyPC5KbA3YkK6OY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【INGY-K 002】fbxモデル","description":"かっこいい刀です。\n展開アニメーションはこんな感じです。\n https://twitter.com/ALERT_jp_555/status/1120570767333216256\n\n導入解説を付けていますが、理解するにはそれなりのunity知識を必要とします。不明な点があればtwitterまでご連絡ください。\n\n※追記:SDK3での動作想定をしていませんでしたが、簡易的な説明を導入解説に追加しました。","url":"https://booth.pm/ja/items/1328501","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/d0287a31-78e9-429d-804d-e3582e9dc539/i/1328501/8fd57213-7f1f-4475-9976-14364d34ef36_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="QFBmnTXYO664114CjLcS/X9JwC2SYW+RPYZGi0dosUE="></script>
+    nonce="VId3nR+ZZ6j7M7AtmjztPY4fHCHlbyPC5KbA3YkK6OY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -176,7 +176,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               【INGY-K 002】fbxモデル
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -212,6 +212,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -321,9 +323,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
