updated at: 2023-08-03 17:13, EarEaring耳のイヤリング - zuzuchi - BOOTH

--- a/VRChat/82/1328182.html
+++ b/VRChat/82/1328182.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "fPmAyjHxHMaHvdddbdFP8WH4ae9Us08V81ew3PPsfiU="></script>
+    "PPbblAlj78QjvBeoRD7Y/ngLk9H43x3VXbxXaDEmTa4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"EarEaring耳のイヤリング","description":"耳に耳","url":"https://booth.pm/ja/items/1328182","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/82009356-ef4d-412b-a19a-1c85fdcfa899/i/1328182/47c85513-1616-4d43-be9d-4721e1143321_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="fPmAyjHxHMaHvdddbdFP8WH4ae9Us08V81ew3PPsfiU="></script>
+    nonce="PPbblAlj78QjvBeoRD7Y/ngLk9H43x3VXbxXaDEmTa4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -150,7 +150,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               EarEaring耳のイヤリング
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -186,6 +186,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -295,9 +297,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
