--- a/VRChat/13/1328013.html
+++ b/VRChat/13/1328013.html
@@ -77,9 +77,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "Qav+WzAChyT8MiGahHCCiMcov1VvlPPVipNjY915nSA="></script>
+    "dsVUCZt8Ah3e2/RO/6yhHylwKA8ToWDuomnyljcXqI0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"600億$$のグラス","description":"賞金首のようなサングラス\nつけてもエンジェルアームは出せません。","url":"https://booth.pm/ja/items/1328013","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/a446d8f7-127d-4117-a58c-d29e74abf52f/i/1328013/cb5859d8-d1d3-435e-a53d-2fa8467fb99a_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Qav+WzAChyT8MiGahHCCiMcov1VvlPPVipNjY915nSA="></script>
+    nonce="dsVUCZt8Ah3e2/RO/6yhHylwKA8ToWDuomnyljcXqI0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -151,7 +151,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               600億$$のグラス
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -187,6 +187,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -296,9 +298,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
