updated at: 2023-08-03 17:13, 【無料】ペンチとラジオペンチのセット - あ - BOOTH

--- a/VRChat/37/1319037.html
+++ b/VRChat/37/1319037.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "5PpMkApUxBnV9H45NWBZyXkEP3TkjjNFHQ+UKSyTa/c="></script>
+    "c/JPsvTdGqXBduh0AZCjz5Ecmk0ox9O6DI9ej4EAXSM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】ペンチとラジオペンチのセット","description":"ペンチとラジオペンチです。開閉アニメーションつき。\nペンチは△1144\nラジオペンチは△936です。\nzipの中身はunitypackageとfbxが入ってます。\n\n改変などはご自由にどうぞ。\n\n再配布は禁止でお願いします。","url":"https://booth.pm/ja/items/1319037","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/b7c0eb1d-5d94-4420-9b1c-2f029c0e3ac6/i/1319037/b70a61b6-e44a-4642-8e1c-c269ca25d547_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="5PpMkApUxBnV9H45NWBZyXkEP3TkjjNFHQ+UKSyTa/c="></script>
+    nonce="c/JPsvTdGqXBduh0AZCjz5Ecmk0ox9O6DI9ej4EAXSM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -153,7 +153,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               【無料】ペンチとラジオペンチのセット
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -189,6 +189,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -349,9 +351,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
