updated at: 2023-08-03 17:14, 【#VRoid】アイドル風ドレスセット青【販売終了】 - ワンダホの店（wonderfulp store） - BOOTH

--- a/VRChat/95/1326595.html
+++ b/VRChat/95/1326595.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "eYYC0PYYGqgrtZWZRVshpnt6ycpQux0UZ7fUhD75v+U="></script>
+    "8ciArVL3y1oQ3Jftj7ZCHY/x4GiZ+eC93KgCS0/uz4U="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【#VRoid】アイドル風ドレスセット青【販売終了】","description":"本商品は配布と販売を終了させていただきました。\n既に本商品をお持ちの方は、引き続きご使用いただけます。\n長らくのご利用、誠にありがとうございました。\n\nThis product is no longer distributed and sold.\nIf you already have this product, you can continue to use it.\nThank you very much.","url":"https://booth.pm/ja/items/1326595","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"1000","highPrice":"2000"},"image":"https://booth.pximg.net/c/620x620/e0c00f80-a6ee-49d6-8710-f6624f57e422/i/1326595/c6fe8034-49c9-40b4-a8c5-73deb58fed0d_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="eYYC0PYYGqgrtZWZRVshpnt6ycpQux0UZ7fUhD75v+U="></script>
+    nonce="8ciArVL3y1oQ3Jftj7ZCHY/x4GiZ+eC93KgCS0/uz4U="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -163,7 +163,7 @@
                               販売期間：2019年1月1日 00時00分から2022年2月2日
                               23時59分まで
                             </div>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -199,6 +199,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -282,9 +284,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
