updated at: 2023-08-03 17:14, VRCHierarchyHighlighter - 藍銅鉱技研 - BOOTH

--- a/VRChat/73/1326573.html
+++ b/VRChat/73/1326573.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "f/aiPpC+yXIO2CJpFCp0H/t109rtSf3MDRKpNUqThgc="></script>
+    "kGPTSYS6ScJ05DpjxQckLKziNbzJtIDvoyzfF5/F9DY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRCHierarchyHighlighter","description":"ヒエラルキの階層表示をハイライトで強調表示するのと、\nVRCで扱う重要コンポーネントをアイコンで表示するやつです。\n\n注意: VRChatが2019対応するためUnity2018LTS用は今後サポートしません\n\n対応コンポーネントは、\n* VRC_AvaterDescriptor\n* VRC_MirrorReflection\n* MeshRenderer\n* SkinnedMeshRenderer\n* DynamicBone\n* Physics Bone\n* AudioSource\n* Light\n* LightProbeGroup\n* ReflectionProbe\nです。\n（今後Rigidbody, Joint, Clothなどに対応するかもしれません）\n\nこのエディタ拡張を導入することによって、\n間違った階層にオブジェクトを突っ込むリスクを下げたり、オブジェクトにちゃんとDynamicBoneが適用されているのか、\nどのオブジェクトがVRCのアバターコンポーネントを持っているのか、メッシュ構造を持っているのかを可視化することが出来ます。","url":"https://booth.pm/ja/items/1326573","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"300"},"image":"https://booth.pximg.net/c/620x620/6bdf2df7-47d0-4756-8dfe-1337da79c2a3/i/1326573/6b65d797-979a-4d10-947b-934fabee27c2_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="f/aiPpC+yXIO2CJpFCp0H/t109rtSf3MDRKpNUqThgc="></script>
+    nonce="kGPTSYS6ScJ05DpjxQckLKziNbzJtIDvoyzfF5/F9DY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -157,7 +157,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               VRCHierarchyHighlighter
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -173,7 +173,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      1636
+                                      1643
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -189,10 +189,12 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      1636
+                                      1643
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -415,9 +417,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
