--- a/VRChat/77/1326277.html
+++ b/VRChat/77/1326277.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "duhi/g97YA/793bpQBfhpZ+U2Q+Gf48l6Jf55wOX1bs="></script>
+    "w20HQoMcbMaTEAKU9Q/DTZVC6hMGp5ZT6E1kyqSa+pE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRchat向け】角度で色が変わる宝石セット【アクセサリー】","description":"https://twitter.com/chemical_15_VR/status/1119937097727533057\n※動いている画像の添付されたツイートのリンクです\n\n■角度や距離で色が変わる宝石のシェーダーとFBXのセットです。unityPackage形式となっています。\n\n■使い方\nイヤリング風のモデルとペンダントトップ風モデルが入っています。\nイヤリング風モデルはDynamicBone対応かつモーフで奥行のサイズが変えられます。\n\nMaterialのセットアップ方法は同梱の使い方.pngを参照にしてください\n\nペンダントトップ風モデルは\nVRchat向けアバター用ネックレスチェーン\nhttps://chemical15.booth.pm/items/1052437\n\nと組み合わせると簡単にネックレスにできます。\n\n■免責事項\nこのデータの使用によって発生したいかなる損害・損失・トラブルについて、作者は一切の責任を負いません\n\n■禁則事項\n政治的利用\n特定の信条や宗教のための使用\n公序良俗に反する行為\n再配布（改造・未改造問わず）\n※アバターペデスタルへの使用も再配布にあたります\nその他製作者が不適切と判断したもの\n※上記の規約は予告なく変更する場合があります\n■やっていい事\n改変\n\n※上記以外の使用については作者にお問い合わせください。\n\n連絡先：https://twitter.com/chemical_15_VR\n","url":"https://booth.pm/ja/items/1326277","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/9585a184-fff0-488e-8a9d-612c758951c2/i/1326277/e5173a44-5929-4db5-b4fb-a3d472c9fc60_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="duhi/g97YA/793bpQBfhpZ+U2Q+Gf48l6Jf55wOX1bs="></script>
+    nonce="w20HQoMcbMaTEAKU9Q/DTZVC6hMGp5ZT6E1kyqSa+pE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -154,7 +154,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               【VRchat向け】角度で色が変わる宝石セット【アクセサリー】
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -190,6 +190,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -299,9 +301,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
