updated at: 2023-08-03 17:14, 【無料】指輪3 15個セット　 - 雑貨屋 - BOOTH

--- a/VRChat/47/1325947.html
+++ b/VRChat/47/1325947.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "dl0W9ql5yhvua/oA4XVzd2RupHldF0sQFV/tk23puTg="></script>
+    "APhC5a3xX//yRWk/iVuWlft68ZwPJA4A8LYRim1DSdM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】指輪3 15個セット　","description":"指輪はNo,31～No,45の計15個のセット\n\nセット内容\n　README\n　指輪（リング）No31～№45\n　指輪見本（JPG）\n\nポリゴン数 最小△200～最大△1552\nshader スタンダード うにショップ様のcrystal shader\n\n例のごとくUV展開は一切しておらず、マテリアルでのみの配色となっております。","url":"https://booth.pm/ja/items/1325947","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/b192de80-ab9a-405c-a8c2-559c78ffe3e6/i/1325947/0aea0972-a364-4d0b-865a-ba7051b1161d_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="dl0W9ql5yhvua/oA4XVzd2RupHldF0sQFV/tk23puTg="></script>
+    nonce="APhC5a3xX//yRWk/iVuWlft68ZwPJA4A8LYRim1DSdM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -153,7 +153,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               【無料】指輪3 15個セット　
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -189,6 +189,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -350,9 +352,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
