updated at: 2023-10-01 19:29, 【3Dモデル】RAY MUFFLER -レイマフラー- v1.1.1 - スタジオシャーロ - BOOTH

--- a/VRChat/44/987844.html
+++ b/VRChat/44/987844.html
@@ -4,7 +4,7 @@
     <link href="/manifest.json" rel="manifest">
     <meta charset="utf-8">
     <title>
-      【3Dモデル】RAY MUFFLER -レイマフラー- v1.1.1 - ⊿S.I.N - BOOTH
+      【3Dモデル】RAY MUFFLER -レイマフラー- v1.1.1 - スタジオシャーロ - BOOTH
     </title>
     <meta name="description" content=
     "【3Dモデル】RAY MUFFLER -レイマフラー- v1.1.1">
@@ -14,14 +14,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【3Dモデル】RAY MUFFLER -レイマフラー- v1.1.1 - ⊿S.I.N - BOOTH">
+    "【3Dモデル】RAY MUFFLER -レイマフラー- v1.1.1 - スタジオシャーロ - BOOTH">
     <meta name="twitter:description" content=
     "【3Dモデル】RAY MUFFLER -レイマフラー- v1.1.1">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/aca730df-46b8-404d-b7cd-6d73723845a4/i/987844/b7d9fdfa-2856-4a25-b50f-84d34ef260d1_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【3Dモデル】RAY MUFFLER -レイマフラー- v1.1.1 - ⊿S.I.N - BOOTH">
+    "【3Dモデル】RAY MUFFLER -レイマフラー- v1.1.1 - スタジオシャーロ - BOOTH">
     <meta property="og:description" content=
     "【3Dモデル】RAY MUFFLER -レイマフラー- v1.1.1">
     <meta property="og:image" content=
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/d4c0d5357203fd37a6c0.js" defer=
     "defer" nonce=
-    "9la8YFNiyTvCaqt+09EvauRA23p1xN3xHWYM3Kn2xWU="></script>
+    "MSuk6gnRPuQNw+yE6Xy2UNYzrQNcJx39A8CNLDeyvds="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3Dモデル】RAY MUFFLER -レイマフラー- v1.1.1","description":"【3Dモデル】RAY MUFFLER -レイマフラー- v1.1.1","url":"https://booth.pm/ja/items/987844","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/aca730df-46b8-404d-b7cd-6d73723845a4/i/987844/b7d9fdfa-2856-4a25-b50f-84d34ef260d1_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9la8YFNiyTvCaqt+09EvauRA23p1xN3xHWYM3Kn2xWU="></script>
+    nonce="MSuk6gnRPuQNw+yE6Xy2UNYzrQNcJx39A8CNLDeyvds="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -145,10 +145,10 @@
                             "from market_show via market_item_detail to shop_index"
                             data-tracking="click" target="_blank"
                             rel="noopener" href=
-                            "https://tomori-hikage.booth.pm/"><img alt="⊿S.I.N"
+                            "https://tomori-hikage.booth.pm/"><img alt="スタジオシャーロ"
                             class="h-[24px] rounded-oval w-[24px]"
                             src=
-                            "https://booth.pximg.net/c/48x48/users/2817711/icon_image/32f77b5f-7f0d-463d-b676-af15cd717879_base_resized.jpg">⊿S.I.N</a>
+                            "https://booth.pximg.net/c/48x48/users/2817711/icon_image/a6b86e0a-933f-49f5-a4bf-0f88f991c54c_base_resized.jpg">スタジオシャーロ</a>
                             <h2 class=
                             "font-bold leading-[32px] m-0 text-[24px]">
                               【3Dモデル】RAY MUFFLER -レイマフラー- v1.1.1
@@ -648,7 +648,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;#にじそうさく08&quot;,&quot;value&quot;:&quot;nijisousaku08&quot;},{&quot;label&quot;:&quot;J.GARDEN54&quot;,&quot;value&quot;:&quot;j-garden54&quot;},{&quot;label&quot;:&quot;NEOKET5&quot;,&quot;value&quot;:&quot;neoket5&quot;},{&quot;label&quot;:&quot;COMIC1☆23&quot;,&quot;value&quot;:&quot;comic1-23&quot;},{&quot;label&quot;:&quot;GOOD COMIC CITY 29&quot;,&quot;value&quot;:&quot;good-comiccity29&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230922-&quot;,&quot;value&quot;:&quot;comiccity-online-230922&quot;},{&quot;label&quot;:&quot;こみっくトレジャー42&quot;,&quot;value&quot;:&quot;comic-treasure-42&quot;},{&quot;label&quot;:&quot;COMITIA145&quot;,&quot;value&quot;:&quot;comitia145&quot;},{&quot;label&quot;:&quot;TOKYO FES Aug.2023&quot;,&quot;value&quot;:&quot;tokyofes-aug2023&quot;},{&quot;label&quot;:&quot;超COMIC CITY ONLINE-230825-&quot;,&quot;value&quot;:&quot;comiccity-online-230825&quot;}]"
+    "[{&quot;label&quot;:&quot;TOKYO FES Oct.2023&quot;,&quot;value&quot;:&quot;tokyofes-oct2023&quot;},{&quot;label&quot;:&quot;#にじそうさく08&quot;,&quot;value&quot;:&quot;nijisousaku08&quot;},{&quot;label&quot;:&quot;J.GARDEN54&quot;,&quot;value&quot;:&quot;j-garden54&quot;},{&quot;label&quot;:&quot;NEOKET5&quot;,&quot;value&quot;:&quot;neoket5&quot;},{&quot;label&quot;:&quot;COMIC1☆23&quot;,&quot;value&quot;:&quot;comic1-23&quot;},{&quot;label&quot;:&quot;GOOD COMIC CITY 29&quot;,&quot;value&quot;:&quot;good-comiccity29&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230922-&quot;,&quot;value&quot;:&quot;comiccity-online-230922&quot;},{&quot;label&quot;:&quot;こみっくトレジャー42&quot;,&quot;value&quot;:&quot;comic-treasure-42&quot;},{&quot;label&quot;:&quot;COMITIA145&quot;,&quot;value&quot;:&quot;comitia145&quot;},{&quot;label&quot;:&quot;TOKYO FES Aug.2023&quot;,&quot;value&quot;:&quot;tokyofes-aug2023&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
